themes/dfkaye/static/css/main.css
/* dfkaye blog styles */

:root {
  --hover-color: #008800;
  --link-color: #6f5ff6;
  --text-color: #000;
  --bg-color: #fff;
  --date-time-color: #757575;
  --fill-color: #ababab;
  --icon-height: 32px;
  --icon-margin: .5em 0.25em -.5em;
  --hugo-color: #ff0095;
  --linkedin-color: #0077b5;
  --netlify-color: #009387;
  --netlify-gradient: url(#icon-gradient-netlify);
  --github-color: #6cc644;
  --twitter-color: #1da1f2;
}


* {
  box-sizing: border-box;
  line-height: 1.8;
  margin: 0;
  padding: 0;
}

::after,
::before {
  box-sizing: inherit;
  -webkit-font-smoothing: antialiased;
}


html {
  background: var(--bg-color);
  color: var(--text-color);
  font-family: consolas, monaco, "Andale Mono", monospace;
  font-size: 100%;
  scroll-behavior: smooth;
}

[dfk-body] {
  /* set width to 100% on all mobile (galaxy fold, iPhone 5, etc.) */
  position: relative;
}

[hidden] {
  display: none;
}

[visually-hidden] {
  /* visually hidden skip link */
  /* https://gomakethings.com/revisting-aria-label-versus-a-visually-hidden-class/ */
  border: 0;
  clip: rect(0 0 0 0);
  /* clip-path: inset(50%); */
  height: 1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

/* flow */

header {
  color: #fff;
  display: flex;
  flex-flow: row wrap;
  justify-content: space-between;
  /* use 12.25em if site status is hidden */
  min-height: 15.25em;
}

header ~ * {
  margin: 1.5em 0;
  padding: 0 5%;
}

[role="banner"] {
  background-image: url(/img/hexo-banner-min.jpg);
  background-position: top -39em left 0;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  min-height: inherit;
  z-index: -1;
}

footer {
  border-top: 1px solid #ccc;
  display: flex;
  font-size: .85em;
  justify-content: space-between;
}

[nav] [site-title] {
  height: 3em;
  min-width: 5em; /* overrides a { overflow-wrap } */
  margin: .2em 0;
  padding: .75em;
}

[page-title] {
  /* background-color: rgba(22, 22, 254, .15); */
  text-align: center;
  width: 100%;
}

[site-status] {
  /* background-color: rgba(22, 22, 22, .15); */
  display: flex;
  font-size: 1em;
  justify-content: center;
  width: 100%;
}

[role="doc-subtitle"] {
  font-style: italic;
  /* color: rgba(110, 110, 248, 0.877); */
}

[role="main"] li {
  margin: 1em 0 1em 1em;
}

[page-intro] {/* h1 */
  text-shadow: 3px 3px 12px rgba(0, 0, 0, 0.2);
}

h2, h3 {
  text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.2);
}

/* This pads the content - p tags, li, etc. */
[page-intro] ~ * {
  margin: 1em 0;
}

/* could use more polish here */
[page-intro] ~ blockquote {
  background-color: rgba(22, 22, 254, .15);
  /* rgba(24, 143, 255, 0.32); */
  border-left: 5px solid rgba(22, 22, 254, .5);
  /* 2px solid #188fff; */
  font-family: monospace;
  font-size: 1.5em;
  font-style: italic;
  margin: 2em 0;
  padding: .5em 1em;
}

q {
  display: block;
  font-style: italic;
}

q::before,
q::after {
  color:  rgba(22, 22, 254, .5);
  font-style: italic;
}

q::before {
  align-self: flex-start;
}
q::after {
  align-self: flex-end;
}

[prose] {
  margin: 2em 5% 3em;
  text-indent: 2.5em;
}

[verse] {
  display:flex;
  place-content: center;
}

/* temporary, until we add chroma */

[page-intro] ~ pre {
  background-color: #eee;
  border-left: 5px solid rgba(22, 22, 254, .5);
  margin: 3em 0;
  padding: 1em;
}

code {
  background-color: #eee;
  font-family: consolas, monaco, "Andale Mono", monospace;
  padding: .25em .15em;
  white-space: break-spaces;
}

pre code {
  padding: .25em 0;
}

kbd {
  border: 1px solid #666;
  border-radius: .25em;
  box-shadow: 1px 1px #ccc;
  padding: 0.25em 0.5em;
}

/* end until chroma */

/* links */

a {
  color: var(--link-color);
  /*
    for very narrow screens showing long URLs,
    esp. galaxy fold and iphone 5
   */
  word-break: break-word;
  /* overflow-wrap not supported on safari iOS */
  overflow-wrap: anywhere;
}

a:not([icon]):hover,
a:not([icon]):focus,
a:not([icon]):active {
  background-color: #efefef;
  color: var(--hover-color);
  text-decoration: underline;
}


/* nav */

[nav] {
  display: flex;
  justify-content: space-between;
  width: 100%;
}

[nav] ul {
  list-style-type: none;
  display: flex;
  flex-flow: row wrap;
  align-items: baseline;
  justify-content: center;
}

[nav] li {
  display: inline-block;
  margin: 1em;
}

[nav] a {
  color: var(--link-color);
  font-weight: 600;
  padding: .5em;
}

[nav="header"] a {
  background-color: rgba(10,110, 200, .25);
  color: white;
}

/* current page or location */

[aria-current] [href] {
  outline: 1px dotted #fff;
  background: rgba(22, 22, 254, .5);
}

/* nav icons */

[icon] svg {
  fill: var(--fill-color);
  height: var(--icon-height);
  margin: var(--icon-margin);
}

[icon-defs] {
  position: absolute;
  bottom: 0;
  z-index: -1;
}

[icon="hugo"]:hover,
[icon="hugo"]:focus,
[icon="hugo"]:active {
  color: var(--hugo-color);
}

[icon="hugo"]:hover svg,
[icon="hugo"]:focus svg,
[icon="hugo"]:active svg {
  fill: var(--hugo-color);
}

[icon="netlify"]:hover,
[icon="netlify"]:focus,
[icon="netlify"]:active {
  color: var(--netlify-color);
}

[icon="netlify"]:hover svg,
[icon="netlify"]:focus svg,
[icon="netlify"]:active svg {
  /* This was fun to figure out. */
  fill: var(--netlify-gradient);
}

[icon="github"]:hover,
[icon="github"]:focus,
[icon="github"]:active {
  color: var(--github-color);
}

[icon="github"]:hover svg,
[icon="github"]:focus svg,
[icon="github"]:active svg {
  fill: var(--github-color);
}

[icon="linkedin"]:hover,
[icon="linkedin"]:focus,
[icon="linkedin"]:active {
  color: var(--linkedin-color);
}

[icon="linkedin"]:hover svg,
[icon="linkedin"]:focus svg,
[icon="linkedin"]:active svg {
  fill: var(--linkedin-color);
}

[icon="twitter"]:hover,
[icon="twitter"]:focus,
[icon="twitter"]:active {
  color: var(--twitter-color);
}

[icon="twitter"]:hover svg,
[icon="twitter"]:focus svg,
[icon="twitter"]:active svg {
  fill: var(--twitter-color);
}


/* list pages */

[page-list] {
  display: flex;
  flex-direction: column;
  margin: 1em;
}

[page-list] [page-item] {
  margin: .25em 0;
}

[datetime] {
  color: var(--date-time-color);
  padding: 0 .5em;
}

[reading-time] {
  color: var(--date-time-color);
}

[publish-date] {
  color: var(--date-time-color);
  display: flex;
  font-size: .75em;
}

[publish-date] li {
  display: flex;
  margin: .25em 1.35rem .25em 0;
  flex-flow: row wrap;
}

/* prev & next post */

[post-prev-next] {
  display: flex;
  font-size: 1.25em;
  justify-content: center;
}

[post] {
  padding: 0 1em;
}

[post="next"] {
  justify-self: flex-end;
}

[post="prev"]:before {
  content: "\2190";
}

[post="next"]:after {
  content: "\2192";
}

